# fish-tank-control-system

./: README.md
QtTCPServer/: Makefile  Makefile.Debug  Makefile.Release  main.cpp  object_script.nettool.Release
QtTCPServer/api/: tcpserver.cpp  tcpserver.h
QtTCPServer/other/: main.qrc
QtTCPServer/temp/moc/: moc_frmmain.cpp  moc_frmtcpclient.cpp  moc_frmtcpserver.cpp  moc_frmudpserver.cpp  moc_quiwidget.cpp  moc_tcpserver.cpp
QtTCPServer/temp/rcc/: qrc_main.cpp
QtTCPServer/temp/ui/: ui_frmmain.h  ui_frmtcpclient.h  ui_frmtcpserver.h  ui_frmudpserver.h
hardware/: contrl_board.PcbDoc
software/TCP_Client_Demo/: 1_256x256_rgb565.h  2_256x256_rgb565.h  3_256x256_rgb565.h  4_256x256_rgb565.h  5_256x256_rgb565.h  6_256x256_rgb565.h  7_256x256_rgb565.h  8_256x256_rgb565.h  CMakeLists.txt  app_main.c  iot_demo.c  rotary_encoder.c  rotary_encoder.h  socket_startup.c  st7789_lcd.c  tcp_client_demo.c
